--- a/resources/sass/base/_tools.scss
+++ b/resources/sass/base/_tools.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../base/variables';
 
 // Spacing
 @each $key, $space in $spacers {
@@ -56,3 +56,5 @@
 .order-1  { order: 1 !important; }
 .order-2  { order: 2 !important; }
 .order-3  { order: 3 !important; }
+
+.flex-grow-1 { flex-grow: 1 !important; }
