boot and d'autres trucs

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,3 +19,5 @@
 @import 'components/landingheader';
 @import 'components/landingfooter';
 @import 'components/pricecard';
+
+@import 'components/auth';
