--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -10,6 +10,7 @@
   font-weight: 500;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.3s;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.05);
